# reversible_rasterizer

./: .gitmodules  CMakeLists.txt  README.md  reversible_rasterizer_api.py  setup.py  test.py
cmake/: embed_glsl.cmake
dep/glad/include/glad/: gl.h  glad.h
dep/glad/src/: gl.c
src/: PyBind.cpp  api.cpp  api.h  config.h  glspec.h  main.cpp  mesh.hpp  model_loader.cpp  model_loader.h  offscreen_renderer.cpp  offscreen_renderer.h  renderer.cpp  renderer.h  shader.cpp  shader.h
src/shaders/: depth_frag.glsl  depth_vert.glsl  frag.glsl  normal_frag.glsl  normal_vert.glsl  trifrag.glsl  trivert.glsl  vert.glsl
